java21 upgrade, get rid of power mock, dependencies update